methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:28: error: '=' expected but ';' found.
  for (fina <- 1 to 3){
^